src/objects/Apttus_Config2__RevRecPolicy__c.object
<CustomObject>
    <description>Represents a revenue recognition policy associated with a product or service</description>
    <fields>
        <fullName>Apttus_Config2__Description__c</fullName>
        <description>The policy description</description>
        <inlineHelpText>The policy description</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IsMilestone__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The flag is required to let the system know that the policy is for milestone revenue recognition which will let the system to create a milestone and assign it to the corresponding agreement fee</description>
        <inlineHelpText>The flag is required to let the system know that the policy is for milestone revenue recognition which will let the system to create a milestone and assign it to the corresponding agreement fee</inlineHelpText>
        <label>Is Milestone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RevRec_Rule__c</fullName>
        <description>The revenue recognition rule associated with the policy</description>
        <inlineHelpText>The revenue recognition rule associated with the policy</inlineHelpText>
        <label>Revenue Recognition Rule</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Immediate</fullName>
                    <default>true</default>
                    <label>Immediate</label>
                </value>
                <value>
                    <fullName>Ratable</fullName>
                </value>
                <value>
                    <fullName>Subscription</fullName>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Revenue Recognition Policy</label>
    <listViews>
        <fullName>Apttus_Config2__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Revenue Recognition Policies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>